--- a/src/Components/Experience/Experience.css
+++ b/src/Components/Experience/Experience.css
@@ -1,46 +1,44 @@
-.Experience{
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    gap:5rem;
-    height:30vh;
-    margin-bottom:8rem;
+.Experience {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem;
+  height: 30vh;
+  margin-bottom: 3rem;
 }
-.Achievement{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-}
-
-.circle{
-    width:4rem;
-    height:4rem;
-    background:white;
-    border-radius:100%;
-    position:relative;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    font-size:1.5rem;
-    font-weight:bold;
-    margin-bottom:2rem;
-    
+.Achievement {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.circle::before{
-    content:'';
-    border-radius:100%;
-    background:linear-gradient(to bottom, #87e6fb 0%, #ffc05c 100%);
-    top:-8px;
-    left:-8px;
-    bottom:-8px;
-    right:-8px;
-    position:absolute;
-    z-index:-1;
-    box-shadow:var(--boxShadow);
+.circle {
+  width: 4rem;
+  height: 4rem;
+  background: white;
+  border-radius: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 2rem;
 }
 
-.Achievement span:nth-of-type(2){
-    color:var(--orange);
+.circle::before {
+  content: "";
+  border-radius: 100%;
+  background: linear-gradient(to bottom, #87e6fb 0%, #ffc05c 100%);
+  top: -8px;
+  left: -8px;
+  bottom: -8px;
+  right: -8px;
+  position: absolute;
+  z-index: -1;
+  box-shadow: var(--boxShadow);
 }
 
+.Achievement span:nth-of-type(2) {
+  color: var(--orange);
+}
