--- a/src/Components/Home/Profile.css
+++ b/src/Components/Home/Profile.css
@@ -1,128 +1,143 @@
 .intro {
-    display: flex;
-    height: 77vh;
-    margin-top: 6rem;
+  display: flex;
+  height: 77vh;
+  margin-top: 6rem;
 }
 
 .i-left {
-    display: flex;
-    position: relative;
-    flex: 1;
-    flex-direction: column;
-    gap: 2rem;
+  display: flex;
+  position: relative;
+  flex: 1;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .i-name {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-.i-name>:nth-child(1) {
-    color: var(--black);
-    font-weight: bold;
-    font-size: 3rem;
+.i-name > :nth-child(1) {
+  color: var(--black);
+  font-weight: bold;
+  font-size: 3rem;
 }
 
-.i-name>:nth-child(2) {
-    color: var(--orange);
-    font-weight: bold;
-    font-size: 3rem;
+.i-name > :nth-child(2) {
+  color: var(--orange);
+  font-weight: bold;
+  font-size: 3rem;
 }
 
-.i-name>:nth-child(3) {
-    color: var(--grey);
-    font-weight: 100;
-    font-size: 14px;
-    margin-top: 10px;
+.i-name > :nth-child(3) {
+  color: var(--grey);
+  font-weight: 100;
+  font-size: 14px;
+  margin-top: 10px;
 }
 
 .i-button {
-    width: 6rem;
-    height: 2rem;
+  width: 6rem;
+  height: 2rem;
 }
-
-
 
 .i-icons {
-    margin-top: 3rem;
-    display: flex;
-    gap: 2rem;
+  margin-top: 3rem;
+  display: flex;
+  gap: 2rem;
 }
 
-.i-icons>* {
-    /* transform:scale(0.4); */
-    width: 30px;
-
+.i-icons > * {
+  /* transform:scale(0.4); */
+  width: 30px;
 }
 
-.i-icons>*:hover {
-    cursor: pointer;
+.i-icons > *:hover {
+  cursor: pointer;
 }
 
 .i-right {
-    flex: 1;
-    position: relative;
+  flex: 1;
+  position: relative;
 }
 
-.i-right>* {
-    position: absolute;
-    z-index: 1;
+.i-right > * {
+  position: absolute;
+  z-index: 1;
 }
 
-.i-right>:nth-child(1) {
-    transform: scale(0.70);
-    left: -15%;
-    top: -9%;
+.i-right > :nth-child(1) {
+  transform: scale(0.7);
+  left: -15%;
+  top: -9%;
 }
 
-.i-right>:nth-child(2) {
-    transform: scale(0.67);
-    left: -3rem;
-    top: -4.6rem;
+.i-right > :nth-child(2) {
+  transform: scale(0.67);
+  left: -3rem;
+  top: -4.6rem;
 }
 
-.i-right>:nth-child(3) {
-    transform: scale(1.4);
-    left: 20%;
+.i-right > :nth-child(3) {
+  transform: scale(1.4);
+  left: 20%;
 }
 
-.i-right>:nth-child(4) {
-    transform: scale(0.62);
-    left: -24%;
-    top: -19%;
-    border-radius: 50%;
-    padding: 0;
+.i-right > :nth-child(4) {
+  transform: scale(0.62);
+  left: -24%;
+  top: -19%;
+  border-radius: 50%;
+  padding: 0;
 }
 
 .blur {
-    position: absolute;
-    width: 22rem;
-    height: 14rem;
-    border-radius: 50%;
-    background: #edd0ff;
-    filter: blur(72px);
-    top: -18%;
-    left: 56%;
-    z-index: -9;
+  position: absolute;
+  width: 22rem;
+  height: 14rem;
+  border-radius: 50%;
+  background: #edd0ff;
+  filter: blur(72px);
+  top: -18%;
+  left: 56%;
+  z-index: -9;
 }
 
-@media screen and (max-width:576px){
-    .intro{
-        flex-direction:column;
-        height:55rem;
-        gap:6rem;
-    }
-    .i-right{
-        transform:scale(0.8);
-        left:2rem;
-    }
+@media screen and (max-width: 730px) {
+  .intro {
+    /* flex-direction: column; */
+    height: 55rem;
+    gap: 0.2rem;
+    display: flex;
+  }
+  .i-right {
+    transform: scale(0.8);
+    left: 2rem;
+  }
 
-    .i-right .blur{
-        display:none;
-    }
-    .floating-div:nth-of-type(1){
-
-        top:7rem ! important;
-    }
+  .i-right .blur {
+    display: none;
+  }
+  .floating-div:nth-of-type(1) {
+    top: 7rem !important;
+  }
 }
-    
+
+@media screen and (max-width: 576px) {
+  .intro {
+    flex-direction: column;
+    height: 55rem;
+    gap: 6rem;
+  }
+  .i-right {
+    transform: scale(0.8);
+    left: 2rem;
+  }
+
+  .i-right .blur {
+    display: none;
+  }
+  .floating-div:nth-of-type(1) {
+    top: 7rem !important;
+  }
+}
