--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -1,39 +1,45 @@
-.portfolio{
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    flex-direction:column;
-    height:70vh;
+.portfolio {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 70vh;
 }
 
-.portfolio span:nth-of-type(1){
-    color:var(--black);
-    font-size:2rem;
-    font-weight:bold;
+.portfolio span:nth-of-type(1) {
+  color: var(--black);
+  font-size: 2rem;
+  font-weight: bold;
 }
-.portfolio span:nth-of-type(2){
-    color:var(--orange);
-    font-size:2.5rem;
-    font-weight:bold;
+.portfolio span:nth-of-type(2) {
+  color: var(--orange);
+  font-size: 2.5rem;
+  font-weight: bold;
 }
-.portfolio .swiper{
-    overflow:visible!important;
-}
-
-.portfolio-slider{
-    margin-top:3rem;
-    width:100%;
+.portfolio .swiper {
+  overflow: visible !important;
 }
 
-
-.portfolio-slider .swiper-slide{
-    width:20rem;
+.portfolio-slider {
+  margin-top: 3rem;
+  width: 100%;
 }
 
-.portfolio img{
-    width:19rem;
-    filter:drop-shadow(-12px  15px 13px rgba(0, 0, 0, 0.25));       
-    border-radius:19px;
+.portfolio-slider .swiper-slide {
+  width: 30rem;
+  height: 20rem;
 }
 
+.portfolio iframe {
+  width: 100%;
+  filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
+  border-radius: 19px;
+  height: 100%;
+  border: none;
+}
 
+.portfolio img {
+  width: 19rem;
+  filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
+  border-radius: 19px;
+}
