--- a/src/Components/Home/Profile.css
+++ b/src/Components/Home/Profile.css
@@ -109,6 +109,7 @@
     height: 55rem;
     gap: 0.2rem;
     display: flex;
+    margin-bottom: -20rem;
   }
   .i-right {
     transform: scale(0.8);
