--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -43,3 +43,21 @@
   filter: drop-shadow(-12px 15px 13px rgba(0, 0, 0, 0.25));
   border-radius: 19px;
 }
+
+@media screen and (max-width: 730px) {
+  .swiper-slide {
+    width: 20rem !important;
+  }
+  .swiper-wrapper iframe {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .swiper-slide {
+    width: 20rem !important;
+  }
+  .swiper-wrapper iframe {
+    width: 100%;
+  }
+}
